Improve HTML formatting and content structure
Refactor HTML structure and styling for consistency.

--- a/reflections/pages/triune-reflection/read.html
+++ b/reflections/pages/triune-reflection/read.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="/reflections/assets/favicon.ico">
 <style>
 body{
-  font-family: 'Georgia', serif;
+  font-family:'Georgia',serif;
   background:#fffdf9;
   color:#3b2b26;
   margin:0;
@@ -21,7 +21,7 @@ header p{margin:2px 0;color:#9c7e74;}
 h3{margin-top:40px;border-top:1px solid #e6d2b5;padding-top:20px;color:#5a392e;}
 h4{color:#7b4c3d;margin-top:24px;margin-bottom:8px;}
 p{text-align:justify;margin:12px 0;}
-ul{margin-left:20px;}
+ol{margin-left:22px;}
 blockquote{
   font-style:italic;
   color:#5f4b43;
@@ -29,7 +29,7 @@ blockquote{
   padding-left:12px;
   margin:16px 0;
 }
-.center{text-align:center;margin:24px 0;}
+.center{text-align:center;margin:24px 0;line-height:1.8;}
 footer{
   text-align:center;
   margin-top:60px;
@@ -50,43 +50,94 @@ footer{
 </header>
 
 <section>
-  <h3>Dedication</h3>
-  <p><em>To every seeker who has questioned the light, yet still walked toward it.</em></p>
 
-  <h3>Epigraph</h3>
-  <blockquote>“Between light and silence, the soul finds its voice.” — Ninox Antolihao</blockquote>
+<h3>Dedication</h3>
+<p><em>To every seeker who has questioned the light, yet still walked toward it.</em></p>
 
-  <h3>Table of Contents</h3>
-  <ol>
-    <li>Introduction – The Unified Self</li>
-    <li>Part I – The Father · The Master Mind</li>
-    <li>Part II – The Son · The Expression of Light</li>
-    <li>Interlude – The Unified Self</li>
-    <li>Part III – The Holy Spirit · Guide Through Emotion and the Subconscious</li>
-    <li>Reflection – The Oneness of Light, Manifestation and Frequency</li>
-    <li>Closing Reflection</li>
-    <li>About the Author</li>
-  </ol>
+<h3>Epigraph</h3>
+<blockquote>“Between light and silence, the soul finds its voice.” — Ninox Antolihao</blockquote>
 
-  <h3>Introduction – The Unified Self</h3>
-  <p>Every existence, from the smallest quantum flicker to the grandest cosmos, is woven from a fundamental pattern...</p>
+<h3>Table of Contents</h3>
+<ol>
+<li>Introduction – The Unified Self</li>
+<li>Part I – The Father · The Master Mind</li>
+<li>Part II – The Son · The Expression of Light</li>
+<li>Interlude – The Unified Self</li>
+<li>Part III – The Holy Spirit · Guide Through Emotion and the Subconscious</li>
+<li>Reflection – The Oneness of Light, Manifestation and Frequency</li>
+<li>Closing Reflection</li>
+<li>About the Author</li>
+</ol>
 
-  <!-- (keep all your reflection text paragraphs here exactly as written, each section under its <h3> or <h4> headings.
-       You can copy the full text from your message and insert it between <p> ... </p> blocks.
-       The centered interlude part can use the class="center" for its lines.) -->
+<h3>Introduction – The Unified Self</h3>
+<p>Every existence, from the smallest quantum flicker to the grandest cosmos, is woven from a fundamental pattern. This book explores that pattern, reframing the ancient Christian concept of the Holy Trinity—the Father, the Son, and the Holy Spirit—as the three essential forces that shape and define our human experience.</p>
+<p>This is not a work of theology, but an allegorical and philosophical map of the self, revealing how mind, body, and subconscious form a unified field of being. We seek to understand the sacred geometry of the self and the importance of oneness—that all is energy, all is one, and all flows from a single, eternal source.</p>
 
-  <div class="center">
-    <p><em>Every existence, from the smallest quantum flicker to the grandest cosmos, is woven from a fundamental pattern.</em></p>
-    <p><em>Between thought and feeling stands the body—the vessel of light in motion...</em></p>
-  </div>
+<h3>Part I – The Father · The Master Mind</h3>
+<h4>The Eternal Source · The Mind as Light and Source</h4>
+<p>The Father symbolizes the Mind, the purest form of Source.</p>
+<ul>
+<li><strong>The Building Blocks:</strong> The Father is the Light particles—the fundamental, non-manifest energy that constitutes the universe. In physics, this is the quantum field; in consciousness, it is pure potentiality, the unformed awareness from which all thought and reality spring.</li>
+<li><strong>Consciousness as Creation:</strong> The Father is the ultimate architect, the “source code” of existence. It is the realm of pure thought, intention, and logic. Our conscious mind is a direct conduit to this universal source, capable of drawing energy and potential into the physical realm.</li>
+<li><strong>Eternity:</strong> Like light, the Father is eternal. Energy cannot be created or destroyed; it merely changes form. This affirms that the source of our being—our core consciousness—is limitless and enduring, a constant within a constantly changing universe.</li>
+</ul>
 
-  <h3>About the Author</h3>
-  <p><strong>Ninox Antolihao</strong> is a Filipino writer and thinker known for blending philosophy, spirituality, and science into reflections that awaken inner understanding...</p>
-</section>
+<h3>Part II – The Son · The Expression of Light</h3>
+<h4>The Body as the Bridge Between Particle and Wave</h4>
+<p>The Son symbolizes the Body—the manifestation in form—and acts as the bridge between the Father (the particle, mind) and the Holy Spirit (the wave, subconscious).</p>
+<ul>
+<li><strong>The Particle and the Wave:</strong> The body exists in the physical realm of particles, grounding the abstract thought of the Father into a tangible form. It is the immediate point of interaction with the world, the structure that contains and focuses the wave-like energy of the subconscious mind.</li>
+<li><strong>The Crucifixion of the Body as Bearer and Sacrifice:</strong> The physical body, the Bearer and Sacrifice, is central to the crucifixion narrative. Jesus’s death symbolizes light returning to its source—not as a transaction for heaven, but as a philosophical act of resistance.</li>
+<li><strong>The Act of Liberation:</strong> The crucifixion was the ultimate price paid for opposing the established order. By allowing his body to be publicly destroyed, Jesus enacted a powerful message for his time and for future humanity.</li>
+<li><strong>Saving the People from Hardship:</strong> Salvation here is not a contract for heaven, but a radical form of earthly liberation—a stand against the ruthless power of empire and corruption.</li>
+<li><strong>True Salvation:</strong> This sacrifice is enlightenment: liberty from illusion. The miracle is not rising to the clouds, but rising above fear, control, and false authority. To follow the Son is to embody truth in the face of death, freeing oneself from illusion.</li>
+</ul>
+
+<h3>Interlude – The Unified Self</h3>
+<div class="center">
+<p>Every existence, from the smallest quantum flicker to the grandest cosmos, is woven from a fundamental pattern.</p>
+<p>Between thought and feeling stands the body—the vessel of light in motion.</p>
+<p>It is where heaven descends into touch and silence learns to speak through breath.</p>
+<p>The mind dreams; the spirit feels; but the body remembers.</p>
+<p>In every heartbeat, the divine becomes tangible—a rhythm born from eternity itself.</p>
+<p>Here, light takes form, and emotion finds purpose.</p>
+<p>Here, the infinite learns to feel.</p>
+</div>
+
+<h3>Part III – The Holy Spirit · Guide Through Emotion and the Subconscious</h3>
+<h4>The Subconscious Mind and the Unmasking of Reality</h4>
+<p>The Holy Spirit symbolizes the Subconscious Mind and Intuition.</p>
+<ul>
+<li><strong>The Matrix and Innocence Traded for Insight:</strong> The subconscious is the vast, unseen operating system of reality. The story of Adam and Eve and the apple mirrors the red-pill allegory: the apple is not sin but exchange—innocence for insight.</li>
+<li><strong>The Significance of the Subconscious:</strong> This is the realm of the wave—the non-local, interconnected field of energy and instinct.</li>
+<li><strong>Driving Away the Ego:</strong> By accessing the Holy Spirit, we tap into intuition that moves beyond the fearful logic of the ego. The ego, the self-preserving mask, thrives on illusion; intuition dissolves that mask and reveals unity beneath perception.</li>
+<li><strong>True Power:</strong> Our deepest power lies not in conscious effort (the Father’s mind) but in the effortless creativity of subconscious intention (the Holy Spirit).</li>
+</ul>
+
+<h3>Reflection – The Oneness of Light, Manifestation and Frequency</h3>
+<p>Light, particle, and wave are one.</p>
+<ol>
+<li><strong>Light (The Father):</strong> Pure, white, formless energy—the source.</li>
+<li><strong>Manifestation (The Body):</strong> Light hitting a prism, becoming particle and form.</li>
+<li><strong>Wave (The Holy Spirit):</strong> When that light is broken by the body, it shines its colors—the spectrum of being.</li>
+</ol>
+<p>We are not three separate entities, but one essential whole: eternal, conscious energy expressing itself as a body. When the form dissolves, energy returns to the field of Source—God—the cycle complete. Life’s journey is the conscious integration of particle and wave within light.</p>
+
+<h3>Closing Reflection</h3>
+<p>We are beings of light—fragments of one eternal source. Energy cannot die; it only changes its song. The body fades, the mind dissolves, but the frequency remains—returning to the field from which all began. What we call death is only transformation—light returning to its source.</p>
+<div class="center"><p>— ❖ —</p></div>
+
+<h3>About the Author</h3>
+<p><strong>Ninox Antolihao</strong> is a Filipino writer and thinker known for blending philosophy, spirituality, and science into reflections that awaken inner understanding. Born with a curious mind and a compassionate soul, Ninox explores the unseen connections between energy, faith, and consciousness—the silent threads that weave all life into one field of being.</p>
+<p>He writes not to preach, but to question; not to convert, but to awaken. His works invite readers to look beyond belief and fear and rediscover the truth that every soul is a fragment of the same eternal source.</p>
+<p>Outside his writings, Ninox is a community builder and creative entrepreneur. He runs Stone Grill Restaurant in Leyte, Philippines—a space that reflects his philosophy of warmth, unity, and connection. For him, both food and spirit share the same purpose: to nourish, to gather, and to remind us that we belong.</p>
+<p>His reflections bridge worlds—faith and logic, science and spirit, matter and mystery—guided by one belief: Awareness is the light through which humanity evolves.</p>
+<blockquote>“I don’t write to teach,” he says. “I write to remember—and to help others remember too.”</blockquote>
 
 <footer>
-  <p>First Edition 2025 • Ninox Antolihao</p>
+  <p>Stone Grill Press · Leyte, Philippines · © 2025 Ninox Antolihao<br>First Edition — 2025</p>
 </footer>
 
+</section>
 </body>
 </html>
