--- a/reflections/index.html
+++ b/reflections/index.html
@@ -135,8 +135,8 @@
 </head>
 <body>
   <header>
-    <img src="/reflections/logo.PNG" alt="Stone Grill Logo">
-    <h1>Ninox Reflections</h1>
+    <img src="/reflections/IMG_0690.png" alt="Stone Grill Logo">
+    <h1>Solitude and Rumination</h1>
   </header>
   <div class="hero">All topics in one place. Tap <strong>Read</strong> to open a clean reading mode, or <strong>Download PDF</strong> for print.</div>
 
