Update header title and add subtitle

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -136,7 +136,8 @@
 <body>
   <header>
     <img src="/reflections/IMG_0690.png" alt="Stone Grill Logo">
-    <h1>Solitude and Rumination</h1>
+    <h1>Solitude</h1>
+    <h3>THE INNER KINGDOM OF FAITH, MIND, AND LIGHT</h3>
   </header>
   <div class="hero">All topics in one place. Tap <strong>Read</strong> to open a clean reading mode, or <strong>Download PDF</strong> for print.</div>
 
