Update page title from 'Ninox' to 'Solitude'

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Ninox Reflections — Stone Grill</title>
+  <title>Solitude Reflections — Stone Grill</title>
   <meta name="description" content="All reflections in one page — read or download.">
   <link rel="icon" href="/reflections/IMG_0690.png">
   <style>
