Enhance Triune Reflection section with links
Updated the Triune Reflection section to include clickable links for the cover image and title, and added a PDF link for download.

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -180,27 +180,32 @@
        <!-- The Triune Reflection -->
        <article class="card">
   <div class="left">
-    <img class="book-cover"
-         src="/reflections/pages/triune-reflection/triune-reflection.png"
-         alt="The Triune Reflection cover"
-         onerror="this.src='/reflections/assets/placeholder.jpg'">
-
-    <div class="right">
-    <h3>The Triune Reflection</h3>
-    <p>For every seeker who questioned the light yet walked toward it—on unity, devotion, and becoming.</p>
-    <div class="meta">First Edition 2025 • Reflection • Essay</div>
-    <div class="cover-actions">
-      <a class="btn"
-         data-read="/reflections/pages/triune-reflection/read.html"
-         data-title="The Triune Reflection — Reading Mode"
-         href="/reflections/pages/triune-reflection/read.html"
-         target="_blank">Read</a>
-
-      <a class="btn secondary"
-         href="/reflections/pages/triune-reflection/triune-reflection.pdf">Download</a>
-    </div>
+    <!-- Cover → READ -->
+    <a class="book-link" href="/reflections/pages/the-triune-reflection/read.html" target="_blank" rel="noopener">
+      <img class="book-cover"
+           src="/reflections/pages/the-triune-reflection/cover.jpg"
+           alt="The Triune Reflection cover"
+           onerror="this.src='/reflections/assets/placeholder.jpg'">
+    </a>
   </div>
 
+  <div class="right">
+    <!-- Title → READ -->
+    <h3><a class="title-link" href="/reflections/pages/the-triune-reflection/read.html" target="_blank" rel="noopener">
+      The Triune Reflection
+    </a></h3>
+
+    <p>For every seeker who questioned the light yet walked toward it—on unity, devotion, and becoming.</p>
+    <div class="meta">
+      First Edition 2025 • Reflection • Essay
+      &nbsp;·&nbsp;<a class="small-link" href="/reflections/pages/the-triune-reflection/the-triune-reflection.pdf">PDF</a>
+    </div>
+
+    <!-- ✅ Buttons under description -->
+    <div class="cover-actions">
+      <a class="btn" href="/reflections/pages/the-triune-reflection/read.html" target="_blank" rel="noopener">Read</a>
+      <a class="btn secondary" href="/reflections/pages/the-triune-reflection/the-triune-reflection.pdf">Download</a>
+    </div>
   </div>
 </article>
 
