--- a/reflections/index.html
+++ b/reflections/index.html
@@ -134,7 +134,7 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/moments-of-solitude/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/moments-of-solitude/moments-of-solitude.jpg"
+                 src="/reflections/pages/moments-of-solitude/moments-of-solitude.png"
                  alt="Moments of Solitude cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
