--- a/reflections/index.html
+++ b/reflections/index.html
@@ -91,7 +91,7 @@
 
 <body>
   <header>
-    <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
+    <img src="/reflections/IMG_0690.png" alt="Stone Grill Logo">
     <h1>SOLITUDE</h1>
     <p>The Inner Kingdom of Faith, Mind and Light</p>
   </header>
