--- a/reflections/index.html
+++ b/reflections/index.html
@@ -192,7 +192,7 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/between-nothing-and-space/noting-space.jpg"
+                 src="/reflections/pages/between-nothing-and-space/noting-space.png"
                  alt="Between Nothing and Space cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
