--- a/reflections/index.html
+++ b/reflections/index.html
@@ -9,7 +9,7 @@
 
   <style>
     /* ===== Theme ===== */
-    :root {
+    :root{
       --bg:#1f1815; --paper:#2a211e; --ink:#f3e6dd; --muted:#c9b0a4;
       --accent:#ff6a3e; --accent2:#f7b733; --rule:#ff6a3e;
       --maxw:1100px; --radius:16px;
@@ -17,79 +17,77 @@
     @media (prefers-color-scheme: light){
       :root{ --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d; --accent:#d93404; --accent2:#f7b733; --rule:#fc4a1a;}
     }
-    *{box-sizing:border-box;}
-    html,body{margin:0;height:100%;}
-    body{font-family:Georgia,ui-serif,serif;background:var(--bg);color:var(--ink);}
+    *{box-sizing:border-box}
+    html,body{margin:0;height:100%}
+    body{font-family:Georgia,ui-serif,serif;background:var(--bg);color:var(--ink)}
 
     /* ===== Header ===== */
     header{
       background: linear-gradient(to right, var(--accent2), var(--rule));
       padding: 20px 16px; text-align:center;
     }
-    header img{max-height:56px;}
-    header h1{margin:8px 0 0;font-size:clamp(24px,4.5vw,40px);}
-    .hero{padding:14px 16px;text-align:center;color:var(--muted);}
+    header img{max-height:56px}
+    header h1{margin:8px 0 0; font-size:clamp(24px,4.5vw,40px)}
+    .hero{padding:14px 16px; text-align:center; color:var(--muted)}
 
     /* ===== Layout ===== */
-    .wrap{max-width:var(--maxw);margin:0 auto;padding:12px 16px 42px;}
-    .grid{display:grid;gap:18px;grid-template-columns:repeat(12,1fr);}
+    .wrap{max-width:var(--maxw); margin:0 auto; padding: 12px 16px 42px}
+    .grid{display:grid; gap:18px; grid-template-columns:repeat(12,1fr)}
 
-    /* ===== Card Layout ===== */
-    .card {
+    /* ===== Card (FORCED left|right) ===== */
+    .card{
       grid-column: span 12;
-      display:flex;
-      align-items:flex-start;
+      display:grid !important;
+      grid-template-columns: 170px 1fr !important; /* LEFT cover | RIGHT text */
+      gap:20px !important;
+      align-items:start !important;
       background:var(--paper);
       border:2px solid #e67e22;
-      border-radius:var(--radius);
+      border-radius: var(--radius);
       padding:16px;
-      gap:20px;
+    }
+    @media (min-width:820px){ .card{grid-column: span 6} }
+    @media (min-width:1080px){ .card{grid-column: span 4} }
+
+    /* Left: cover */
+    .left{width:170px !important}
+    .book-link{display:block; border-radius:10px; box-shadow:0 8px 20px rgba(0,0,0,.35); transition:transform .15s ease}
+    .book-link:hover{transform:translateY(-2px)}
+    .book-cover{
+      width:170px !important; height:240px !important; object-fit:cover; display:block; border-radius:10px; background:#fff6e6;
     }
 
-    /* Left cover */
-    .left{flex:0 0 160px;}
-    .book-link{display:block;border-radius:10px;box-shadow:0 8px 20px rgba(0,0,0,.35);transition:transform .15s ease;}
-    .book-link:hover{transform:translateY(-2px);}
-    .book-cover{width:160px;height:230px;object-fit:cover;display:block;border-radius:10px;background:#fff6e6;}
+    /* Right: text */
+    .right{min-width:0}
+    .right h3{margin:0 0 8px; font-size:1.25rem; line-height:1.25}
+    .title-link{color:inherit; text-decoration:none}
+    .title-link:hover{text-decoration:underline}
+    .right p{margin:6px 0 10px; color:var(--muted)}
+    .meta{font-size:.9rem; color:var(--muted)}
 
-    /* Right content */
-    .right{flex:1;min-width:0;}
-    .right h3{margin:0 0 8px;font-size:1.25rem;line-height:1.3;}
-    .title-link{color:inherit;text-decoration:none;}
-    .title-link:hover{text-decoration:underline;}
-    .right p{margin:6px 0 10px;color:var(--muted);}
-    .meta{font-size:.9rem;color:var(--muted);}
-
-    /* Buttons aligned horizontally under description */
-    .cover-actions {
+    /* Buttons under description (side-by-side) */
+    .cover-actions{
       margin-top:12px;
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
-      justify-content:flex-start;
+      display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-start;
     }
-    .btn {
-      background:var(--accent);
-      color:#fff;
-      text-decoration:none;
-      padding:7px 16px;
-      border-radius:10px;
-      font-weight:700;
-      font-size:14px;
-      transition:filter .15s ease;
+    .btn{
+      background:var(--accent); color:#fff; text-decoration:none;
+      padding:7px 16px; border-radius:10px; font-weight:700; font-size:14px;
+      transition: filter .15s ease;
     }
-    .btn:hover{filter:brightness(.95);}
-    .btn.secondary{background:#a94a1e;}
+    .btn:hover{filter:brightness(.95)}
+    .btn.secondary{background:#a94a1e}
 
-    /* Mobile: stacked layout */
-    @media (max-width:700px){
-      .card{flex-direction:column;text-align:center;}
-      .left{margin-bottom:12px;}
-      .cover-actions{justify-content:center;}
+    /* Mobile: ONLY stack under 480px (stricter so most phones in landscape still show left|right) */
+    @media (max-width:480px){
+      .card{grid-template-columns: 1fr !important; text-align:center}
+      .left{width:auto !important}
+      .book-cover{width:200px !important; height:auto !important; margin:0 auto}
+      .right .cover-actions{justify-content:center}
     }
 
-    footer{background:#5a2a27;color:#fff;text-align:center;padding:20px;}
-    footer a{color:#fff;font-weight:700;}
+    footer{background:#5a2a27; color:#fff; text-align:center; padding:20px}
+    footer a{color:#fff; font-weight:700}
   </style>
 </head>
 
@@ -99,20 +97,19 @@
     <h1>SOLITUDE</h1>
     <p>The Inner Kingdom of Faith, Mind and Light</p>
   </header>
-  <div class="hero">
-    All topics in one place. Tap <strong>Read</strong> for a clean reading mode, or <strong>Download PDF</strong> for print.
-  </div>
+  <div class="hero">All topics in one place. Tap <strong>Read</strong> for a clean reading mode, or <strong>Download PDF</strong> for print.</div>
 
   <main class="wrap">
     <section class="grid">
 
-      <!-- ==== Example Card ==== -->
+      <!-- ==== The Triune Reflection ==== -->
       <article class="card">
         <div class="left">
           <a class="book-link" href="/reflections/pages/triune-reflection/read.html" target="_blank" rel="noopener">
-            <img class="book-cover" src="/reflections/pages/triune-reflection/triune-reflection.png"
-              alt="The Triune Reflection cover"
-              onerror="this.src='/reflections/assets/placeholder.jpg'">
+            <img class="book-cover"
+                 src="/reflections/pages/triune-reflection/triune-reflection.png"
+                 alt="The Triune Reflection cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
         </div>
 
@@ -125,7 +122,7 @@
           <p>For every seeker who questioned the light yet walked toward it—on unity, devotion, and becoming.</p>
           <div class="meta">
             First Edition 2025 • Reflection • Essay
-            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/the-triune-reflection/triune-reflection.pdf">PDF</a>
+            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/triune-reflection/triune-reflection.pdf">PDF</a>
           </div>
           <div class="cover-actions">
             <a class="btn" href="/reflections/pages/triune-reflection/read.html" target="_blank" rel="noopener">Read</a>
@@ -134,12 +131,128 @@
         </div>
       </article>
 
-      <!-- You can repeat the same card structure for other reflections -->
+      <!-- ==== Moments of Solitude ==== -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/moments-of-solitude/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/moments-of-solitude/moments-of-solitude.png"
+                 alt="Moments of Solitude cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3>
+            <a class="title-link" href="/reflections/pages/moments-of-solitude/read.html" target="_blank" rel="noopener">
+              Moments of Solitude — How Silence Teaches
+            </a>
+          </h3>
+          <p>A quiet invitation to stillness and presence. Learn the pace of enough and the gentleness of honest attention.</p>
+          <div class="meta">
+            First Edition 2025 • Short Book
+            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/moments-of-solitude/moments-of-solitude.pdf">PDF</a>
+          </div>
+          <div class="cover-actions">
+            <a class="btn" href="/reflections/pages/moments-of-solitude/read.html" target="_blank" rel="noopener">Read</a>
+            <a class="btn secondary" href="/reflections/pages/moments-of-solitude/moments-of-solitude.pdf">Download</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- ==== Multilingual Mind ==== -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/multilingual-mind/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/multilingual-mind/cover.jpg"
+                 alt="Multilingual Mind cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3>
+            <a class="title-link" href="/reflections/pages/multilingual-mind/read.html" target="_blank" rel="noopener">
+              Multilingual Mind — How Language Shapes Thought
+            </a>
+          </h3>
+          <p>How language frames attention, emotion, and decision-making — and how to use that awareness in daily life.</p>
+          <div class="meta">
+            First Edition 2025 • Essay
+            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/multilingual-mind/multilingual-mind.pdf">PDF</a>
+          </div>
+          <div class="cover-actions">
+            <a class="btn" href="/reflections/pages/multilingual-mind/read.html" target="_blank" rel="noopener">Read</a>
+            <a class="btn secondary" href="/reflections/pages/multilingual-mind/multilingual-mind.pdf">Download</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- ==== Between Nothing and Space ==== -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/between-nothing-and-space/noting-space.png"
+                 alt="Between Nothing and Space cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3>
+            <a class="title-link" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">
+              Between Nothing and Space
+            </a>
+          </h3>
+          <p>An essay on emptiness, meaning, and the interval where action begins.</p>
+          <div class="meta">
+            Reflection • Essay
+            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/between-nothing-and-space/between-nothing-and-space.pdf">PDF</a>
+          </div>
+          <div class="cover-actions">
+            <a class="btn" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">Read</a>
+            <a class="btn secondary" href="/reflections/pages/between-nothing-and-space/between-nothing-and-space.pdf">Download</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- ==== The Mirror of Worship ==== -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/mirror-of-worship/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/mirror-of-worship/cover.jpg"
+                 alt="The Mirror of Worship cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3>
+            <a class="title-link" href="/reflections/pages/mirror-of-worship/read.html" target="_blank" rel="noopener">
+              The Mirror of Worship
+            </a>
+          </h3>
+          <p>On devotion as reflection — how what we honor, we become.</p>
+          <div class="meta">
+            Reflection • Essay
+            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/mirror-of-worship/mirror-of-worship.pdf">PDF</a>
+          </div>
+          <div class="cover-actions">
+            <a class="btn" href="/reflections/pages/mirror-of-worship/read.html" target="_blank" rel="noopener">Read</a>
+            <a class="btn secondary" href="/reflections/pages/mirror-of-worship/mirror-of-worship.pdf">Download</a>
+          </div>
+        </div>
+      </article>
+
     </section>
   </main>
 
   <footer>
-    © 2025 Stone Grill Restaurant · <a href="tel:0535680539">Call 053 568 0539</a>
+    © 2025 Stone Grill Restaurant ·
+    <a href="tel:0535680539">Call 053 568 0539</a>
   </footer>
 </body>
 </html>
