--- a/reflections/index.html
+++ b/reflections/index.html
@@ -1,258 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Solitude Reflections — Stone Grill</title>
-  <meta name="description" content="All reflections in one page — read or download.">
-  <link rel="icon" href="/reflections/assets/favicon.ico">
+/* ===== Card (true left|right layout) ===== */
+.card {
+  display: grid !important;
+  grid-template-columns: 160px 1fr !important; /* LEFT cover | RIGHT text */
+  gap: 16px !important;
+  align-items: flex-start !important;
+  background: var(--paper);
+  border: 2px solid #e67e22;
+  border-radius: var(--radius);
+  padding: 14px;
+}
 
-  <style>
-    /* ===== Theme ===== */
-    :root{
-      --bg:#1f1815; --paper:#2a211e; --ink:#f3e6dd; --muted:#c9b0a4;
-      --accent:#ff6a3e; --accent2:#f7b733; --rule:#ff6a3e;
-      --maxw:1100px; --radius:16px;
-    }
-    @media (prefers-color-scheme: light){
-      :root{ --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d; --accent:#d93404; --accent2:#f7b733; --rule:#fc4a1a;}
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0;height:100%}
-    body{font-family:Georgia,ui-serif,serif;background:var(--bg);color:var(--ink)}
+/* Cover section */
+.left {
+  width: 160px !important;
+  display: flex;
+  justify-content: center;
+}
+.book-link {
+  display: block;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgba(0,0,0,.35);
+  transition: transform .15s ease;
+}
+.book-link:hover { transform: translateY(-2px); }
+.book-cover {
+  width: 150px !important;
+  height: 220px !important;
+  object-fit: cover;
+  display: block;
+  border-radius: 10px;
+  background: #fff6e6;
+}
 
-    /* ===== Header ===== */
-    header{
-      background: linear-gradient(to right, var(--accent2), var(--rule));
-      padding: 20px 16px; text-align:center;
-    }
-    header img{max-height:56px}
-    header h1{margin:8px 0 0; font-size:clamp(24px,4.5vw,40px)}
-    .hero{padding:14px 16px; text-align:center; color:var(--muted)}
+/* Text section */
+.right { min-width: 0; }
+.right h3 {
+  margin: 0 0 6px;
+  font-size: 1.05rem;   /* smaller title */
+  line-height: 1.2;
+}
+.title-link {
+  color: inherit;
+  text-decoration: none;
+}
+.title-link:hover { text-decoration: underline; }
 
-    /* ===== Layout ===== */
-    .wrap{max-width:var(--maxw); margin:0 auto; padding: 12px 16px 42px}
-    .grid{display:grid; gap:18px; grid-template-columns:repeat(12,1fr)}
+.right p {
+  margin: 4px 0 8px;
+  color: var(--muted);
+  font-size: 0.95rem;
+}
+.meta {
+  font-size: 0.85rem;
+  color: var(--muted);
+}
 
-    /* ===== Card (FORCED left|right) ===== */
-    .card{
-      grid-column: span 12;
-      display:grid !important;
-      grid-template-columns: 170px 1fr !important; /* LEFT cover | RIGHT text */
-      gap:20px !important;
-      align-items:start !important;
-      background:var(--paper);
-      border:2px solid #e67e22;
-      border-radius: var(--radius);
-      padding:16px;
-    }
-    @media (min-width:820px){ .card{grid-column: span 6} }
-    @media (min-width:1080px){ .card{grid-column: span 4} }
+/* Buttons smaller and aligned horizontally */
+.cover-actions {
+  margin-top: 10px;
+  display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.btn {
+  background: var(--accent);
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 12px;       /* smaller padding */
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 13px;         /* smaller font */
+  transition: filter .15s ease;
+}
+.btn:hover { filter: brightness(.95); }
+.btn.secondary { background: #a94a1e; }
 
-    /* Left: cover */
-    .left{width:170px !important}
-    .book-link{display:block; border-radius:10px; box-shadow:0 8px 20px rgba(0,0,0,.35); transition:transform .15s ease}
-    .book-link:hover{transform:translateY(-2px)}
-    .book-cover{
-      width:170px !important; height:240px !important; object-fit:cover; display:block; border-radius:10px; background:#fff6e6;
-    }
-
-    /* Right: text */
-    .right{min-width:0}
-    .right h3{margin:0 0 8px; font-size:1.25rem; line-height:1.25}
-    .title-link{color:inherit; text-decoration:none}
-    .title-link:hover{text-decoration:underline}
-    .right p{margin:6px 0 10px; color:var(--muted)}
-    .meta{font-size:.9rem; color:var(--muted)}
-
-    /* Buttons under description (side-by-side) */
-    .cover-actions{
-      margin-top:12px;
-      display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-start;
-    }
-    .btn{
-      background:var(--accent); color:#fff; text-decoration:none;
-      padding:7px 16px; border-radius:10px; font-weight:700; font-size:14px;
-      transition: filter .15s ease;
-    }
-    .btn:hover{filter:brightness(.95)}
-    .btn.secondary{background:#a94a1e}
-
-    /* Mobile: ONLY stack under 480px (stricter so most phones in landscape still show left|right) */
-    @media (max-width:480px){
-      .card{grid-template-columns: 1fr !important; text-align:center}
-      .left{width:auto !important}
-      .book-cover{width:200px !important; height:auto !important; margin:0 auto}
-      .right .cover-actions{justify-content:center}
-    }
-
-    footer{background:#5a2a27; color:#fff; text-align:center; padding:20px}
-    footer a{color:#fff; font-weight:700}
-  </style>
-</head>
-
-<body>
-  <header>
-    <img src="/reflections/IMG_0690.png" alt="Stone Grill Logo">
-    <h1>SOLITUDE</h1>
-    <p>The Inner Kingdom of Faith, Mind and Light</p>
-  </header>
-  <div class="hero">All topics in one place. Tap <strong>Read</strong> for a clean reading mode, or <strong>Download PDF</strong> for print.</div>
-
-  <main class="wrap">
-    <section class="grid">
-
-      <!-- ==== The Triune Reflection ==== -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/triune-reflection/read.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/triune-reflection/triune-reflection.png"
-                 alt="The Triune Reflection cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
-          </a>
-        </div>
-
-        <div class="right">
-          <h3>
-            <a class="title-link" href="/reflections/pages/triune-reflection/read.html" target="_blank" rel="noopener">
-              The Triune Reflection
-            </a>
-          </h3>
-          <p>For every seeker who questioned the light yet walked toward it—on unity, devotion, and becoming.</p>
-          <div class="meta">
-            First Edition 2025 • Reflection • Essay
-            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/triune-reflection/triune-reflection.pdf">PDF</a>
-          </div>
-          <div class="cover-actions">
-            <a class="btn" href="/reflections/pages/triune-reflection/read.html" target="_blank" rel="noopener">Read</a>
-            <a class="btn secondary" href="/reflections/pages/triune-reflection/triune-reflection.pdf">Download</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- ==== Moments of Solitude ==== -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/moments-of-solitude/read.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/moments-of-solitude/moments-of-solitude.png"
-                 alt="Moments of Solitude cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
-          </a>
-        </div>
-
-        <div class="right">
-          <h3>
-            <a class="title-link" href="/reflections/pages/moments-of-solitude/read.html" target="_blank" rel="noopener">
-              Moments of Solitude — How Silence Teaches
-            </a>
-          </h3>
-          <p>A quiet invitation to stillness and presence. Learn the pace of enough and the gentleness of honest attention.</p>
-          <div class="meta">
-            First Edition 2025 • Short Book
-            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/moments-of-solitude/moments-of-solitude.pdf">PDF</a>
-          </div>
-          <div class="cover-actions">
-            <a class="btn" href="/reflections/pages/moments-of-solitude/read.html" target="_blank" rel="noopener">Read</a>
-            <a class="btn secondary" href="/reflections/pages/moments-of-solitude/moments-of-solitude.pdf">Download</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- ==== Multilingual Mind ==== -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/multilingual-mind/read.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/multilingual-mind/cover.jpg"
-                 alt="Multilingual Mind cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
-          </a>
-        </div>
-
-        <div class="right">
-          <h3>
-            <a class="title-link" href="/reflections/pages/multilingual-mind/read.html" target="_blank" rel="noopener">
-              Multilingual Mind — How Language Shapes Thought
-            </a>
-          </h3>
-          <p>How language frames attention, emotion, and decision-making — and how to use that awareness in daily life.</p>
-          <div class="meta">
-            First Edition 2025 • Essay
-            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/multilingual-mind/multilingual-mind.pdf">PDF</a>
-          </div>
-          <div class="cover-actions">
-            <a class="btn" href="/reflections/pages/multilingual-mind/read.html" target="_blank" rel="noopener">Read</a>
-            <a class="btn secondary" href="/reflections/pages/multilingual-mind/multilingual-mind.pdf">Download</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- ==== Between Nothing and Space ==== -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/between-nothing-and-space/noting-space.png"
-                 alt="Between Nothing and Space cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
-          </a>
-        </div>
-
-        <div class="right">
-          <h3>
-            <a class="title-link" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">
-              Between Nothing and Space
-            </a>
-          </h3>
-          <p>An essay on emptiness, meaning, and the interval where action begins.</p>
-          <div class="meta">
-            Reflection • Essay
-            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/between-nothing-and-space/between-nothing-and-space.pdf">PDF</a>
-          </div>
-          <div class="cover-actions">
-            <a class="btn" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">Read</a>
-            <a class="btn secondary" href="/reflections/pages/between-nothing-and-space/between-nothing-and-space.pdf">Download</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- ==== The Mirror of Worship ==== -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/mirror-of-worship/read.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/mirror-of-worship/cover.jpg"
-                 alt="The Mirror of Worship cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
-          </a>
-        </div>
-
-        <div class="right">
-          <h3>
-            <a class="title-link" href="/reflections/pages/mirror-of-worship/read.html" target="_blank" rel="noopener">
-              The Mirror of Worship
-            </a>
-          </h3>
-          <p>On devotion as reflection — how what we honor, we become.</p>
-          <div class="meta">
-            Reflection • Essay
-            &nbsp;·&nbsp;<a class="title-link" href="/reflections/pages/mirror-of-worship/mirror-of-worship.pdf">PDF</a>
-          </div>
-          <div class="cover-actions">
-            <a class="btn" href="/reflections/pages/mirror-of-worship/read.html" target="_blank" rel="noopener">Read</a>
-            <a class="btn secondary" href="/reflections/pages/mirror-of-worship/mirror-of-worship.pdf">Download</a>
-          </div>
-        </div>
-      </article>
-
-    </section>
-  </main>
-
-  <footer>
-    © 2025 Stone Grill Restaurant ·
-    <a href="tel:0535680539">Call 053 568 0539</a>
-  </footer>
-</body>
-</html>
+/* Force left-right even on small screens */
+@media (max-width: 700px) {
+  .card {
+    grid-template-columns: 140px 1fr !important;
+    text-align: left !important;
+  }
+  .book-cover {
+    width: 130px !important;
+    height: 190px !important;
+  }
+  .right h3 { font-size: 1rem; }
+  .btn { font-size: 12px; padding: 4px 10px; }
+  .right p, .meta { font-size: 0.85rem; }
+}
