--- a/reflections/index.html
+++ b/reflections/index.html
@@ -170,7 +170,7 @@
       <!-- ==== Between Nothing and Space ==== -->
       <article class="card">
         <div class="left">
-          <a class="book-link" href="/reflections/pages/between-nothing-and-space/read.html" target="_blank" rel="noopener">
+          <a class="book-link" href="/reflections/pages/between-nothing-and-space/between-nothing-and-space.pdf" target="_blank" rel="noopener">
             <img class="book-cover"
                  src="/reflections/pages/between-nothing-and-space/noting-space.png"
                  alt="Between Nothing and Space cover"
