--- a/reflections/index.html
+++ b/reflections/index.html
@@ -148,7 +148,7 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/multilingual-mind/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/multilingual-mind/cover.jpg"
+                 src="/reflections/pages/multilingual-mind/multilingual-mind.PNG"
                  alt="Multilingual Mind cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
