--- a/reflections/index.html
+++ b/reflections/index.html
@@ -196,7 +196,7 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/mirror-of-worship/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/mirror-of-worship/cover.jpg"
+                 src="/reflections/pages/mirror-of-worship/mirror-worship.PNG"
                  alt="The Mirror of Worship cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
