--- a/reflections/index.html
+++ b/reflections/index.html
@@ -119,6 +119,30 @@
         </div>
       </article>
 
+      <!-- ==== Oneness and Duality ==== -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/oneness-duality/oneness-duality.pdf" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/oneness-duality/oneness-duality.png"
+                 alt="oneness duality cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+        <div class="right">
+          <h3><a class="title-link" href="/reflections/pages/oneness-duality/oneness-duality.pdf" target="_blank" rel="noopener">
+              Oneness and Duality — Journey from Duality to Oneness</a></h3>
+          <p>A fascinating topic through philosophy, theology, and psychology, ultimately converging a profound idea: that duality—the perceived separation between the self and the world</p>
+          <div class="meta">First Edition 2025 • Short Book
+            <a class="title-link" href="/reflections/pages/oneness-duality/oneness-duality.pdf">PDF</a>
+          </div>
+          <div class="cover-actions">
+            <a class="btn" href="/reflections/pages/oneness-duality/oneness-duality.pdf" target="_blank" rel="noopener">Read</a>
+            <a class="btn secondary" href="/reflections/pages/oneness-duality/oneness-duality.pdf">Download</a>
+          </div>
+        </div>
+      </article>
+      
       <!-- ==== Moments of Solitude ==== -->
       <article class="card">
         <div class="left">
