--- a/reflections/index.html
+++ b/reflections/index.html
@@ -131,9 +131,9 @@
         </div>
         <div class="right">
           <h3><a class="title-link" href="/reflections/pages/oneness-duality/oneness-duality.pdf" target="_blank" rel="noopener">
-              Oneness and Duality — Journey from Duality to Oneness</a></h3>
-          <p>A fascinating topic through philosophy, theology, and psychology, ultimately converging a profound idea: that duality—the perceived separation between the self and the world</p>
-          <div class="meta">First Edition 2025 • Short Book
+              From Oneness to Duality</a></h3>
+          <p>through philosophy, theology, and psychology, converging a profound idea that duality—the perceived separation between the self and the world</p>
+          <div class="meta">First Edition 2025 •
             <a class="title-link" href="/reflections/pages/oneness-duality/oneness-duality.pdf">PDF</a>
           </div>
           <div class="cover-actions">
