--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -1,1 +1,208 @@
-read
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Why Oneness Is Not Separate from Duality — Ninox Antolihao</title>
+  <meta name="description" content="A clean, mobile-friendly reader for the Oneness/Duality reflection by Ninox Antolihao.">
+  <link rel="icon" href="/reflections/assets/favicon.ico">
+
+  <meta property="og:title" content="Why Oneness Is Not Separate from Duality — Ninox Antolihao">
+  <meta property="og:description" content="Read online or download the PDF.">
+  <meta property="og:image" content="./oneness-duality.png">
+
+  <style>
+    /* ===== Theme ===== */
+    :root{
+      --bg:#1f1815; --paper:#2a211e; --ink:#f3e6dd; --muted:#c9b0a4; --accent:#ff6b3d;
+      --ink-weak:#ecd7cb; --line:#3a2e2a;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";}
+    a{color:inherit;text-decoration:none}
+    img{max-width:100%;display:block}
+
+    /* ===== Layout ===== */
+    .wrap{max-width:1100px;margin:0 auto;padding:20px}
+    header{padding:10px 0 20px}
+
+    .card{
+      background:var(--paper);
+      border:1px solid var(--line);
+      border-radius:14px;
+      padding:18px;
+      display:grid;
+      grid-template-columns: 280px 1fr;
+      gap:18px;
+      align-items:start;
+      box-shadow: 0 10px 30px rgba(0,0,0,.25);
+    }
+    .cover{
+      aspect-ratio: 3/4;
+      width:100%;
+      border-radius:10px;
+      overflow:hidden;
+      background:#140f0d;
+      border:1px solid var(--line);
+    }
+    .cover a{display:block;height:100%}
+    .cover img{
+      width:100%; height:100%; object-fit:cover;
+      transition: transform .18s ease;
+    }
+    .cover:hover img{ transform: scale(1.02); }
+
+    .meta h1{
+      margin:0 0 8px 0; line-height:1.15;
+      font-weight:800; font-size: clamp(18px, 3vw, 28px);
+      letter-spacing:.2px;
+    }
+    .meta .byline{
+      margin:0 0 12px 0; color:var(--muted); font-size:14px;
+    }
+    .meta .desc{
+      margin:0 0 14px 0; color:var(--ink-weak); font-size:15px; line-height:1.55;
+    }
+
+    /* Buttons row */
+    .actions{
+      display:flex; flex-wrap:wrap; gap:10px;
+    }
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      padding:10px 14px; font-weight:700; font-size:14px; line-height:1;
+      background:var(--accent); color:#1b0e09; border:none; border-radius:10px;
+      cursor:pointer; box-shadow:0 4px 16px rgba(255,107,61,.25); transition: transform .12s ease, opacity .12s ease;
+    }
+    .btn.secondary{
+      background:transparent; color:var(--ink);
+      border:1px solid var(--line);
+      box-shadow:none;
+    }
+    .btn:active{ transform: translateY(1px); }
+    .btn.small{ font-size:13px; padding:9px 12px; }
+
+    /* Details (kept intact but subtle) */
+    .details{
+      margin-top:12px; color:var(--muted); font-size:13px;
+      border-top:1px dashed var(--line); padding-top:10px;
+    }
+
+    /* Viewer */
+    #viewer{
+      margin-top:18px;
+      background:var(--paper);
+      border:1px solid var(--line);
+      border-radius:12px;
+      overflow:hidden;
+    }
+    .viewer-head{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:10px 12px; border-bottom:1px solid var(--line);
+      color:var(--muted); font-size:13px;
+    }
+    .frame{
+      width:100%;
+      height: min(84vh, 1200px);
+      border:0;
+      background:#0f0b0a;
+    }
+    .note{
+      margin:10px 0 0 0; color:var(--muted); font-size:12px; text-align:right;
+    }
+
+    /* Footer */
+    footer{
+      color:var(--muted); font-size:12px; text-align:center; padding:24px 0 10px;
+    }
+
+    /* ===== Responsive ===== */
+    @media (max-width:900px){
+      .card{ grid-template-columns: 220px 1fr; }
+    }
+    @media (max-width:720px){
+      .card{ grid-template-columns: 1fr; }
+      .cover{ max-width: 360px; margin:0 auto; }
+      .actions{ gap:8px; }
+      .btn{ font-size:13px; padding:10px 12px; }
+      .meta h1{ font-size: clamp(18px, 5vw, 24px); }
+    }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <header aria-label="Page header">
+      <!-- you can place your Stone Grill logo here if you want -->
+    </header>
+
+    <section class="card">
+      <!-- LEFT: Cover (clickable) -->
+      <div class="cover">
+        <a href="#read" id="coverLink" aria-label="Open the reader">
+          <img src="./cover.jpg" alt="Cover — Why Oneness Is Not Separate from Duality"
+               onerror="this.src='/reflections/assets/placeholder-cover.png'">
+        </a>
+      </div>
+
+      <!-- RIGHT: Title, description, buttons -->
+      <div class="meta">
+        <h1>
+          <a href="#read" id="titleLink" aria-label="Open the reader">
+            Why Oneness Is Not Separate from Duality
+          </a>
+        </h1>
+        <p class="byline">By <strong>Ninox Antolihao</strong> • Stone Grill Press • First Edition — 2025</p>
+
+        <p class="desc">
+          Oneness is the context; duality is the content. Duality is not the enemy of Oneness
+          but its functional expression—our mind’s necessary tool for navigating the relative world
+          while rooted in the Absolute. (Reader for your uploaded PDF.)
+        </p>
+
+        <div class="actions" role="group" aria-label="Primary actions">
+          <a class="btn" href="#read">Read Online</a>
+          <a class="btn secondary" href="./oneness-duality.pdf" download>Download PDF</a>
+        </div>
+
+        <div class="details">
+          <div>Format: PDF • Language: English</div>
+          <div>Publisher: Stone Grill Press • © 2025 Ninox Antolihao</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- VIEWER -->
+    <section id="read" aria-label="Reader">
+      <div id="viewer">
+        <div class="viewer-head">
+          <div>PDF Viewer</div>
+          <div>
+            <a class="btn small secondary" href="./oneness-duality.pdf" target="_blank" rel="noopener">Open in new tab</a>
+          </div>
+        </div>
+        <!-- The #view and #toolbar params help most browsers provide a nicer initial view -->
+        <iframe class="frame" src="./oneness-duality.pdf#view=FitH&pagemode=none" title="Oneness / Duality PDF Reader"></iframe>
+      </div>
+      <p class="note">
+        Content provided from your uploaded file.  [oai_citation:1‡oneness-duality.pdf](sediment://file_000000008e68620786b0a00a2c38bbbe)
+      </p>
+    </section>
+
+    <footer>
+      — ❖ —<br>
+      Stone Grill • “Enjoyable and Relaxing”
+    </footer>
+  </div>
+
+  <script>
+    // Make cover and title open the reader smoothly
+    function openReader(e){
+      e.preventDefault();
+      const el = document.getElementById('read');
+      el?.scrollIntoView({behavior:'smooth', block:'start'});
+    }
+    document.getElementById('coverLink')?.addEventListener('click', openReader);
+    document.getElementById('titleLink')?.addEventListener('click', openReader);
+  </script>
+</body>
+</html>
